# studies

Year 1/ICP-1021/: Assign2.sql  Assign3.sql  Branch.sql
Year 1/ICP-1021 (SQL)/: Assign1.sql  My SQLWorkbench 1.docx  My SQLWorkbench 2.docx  My SQLWorkbench 3.docx
Year 1/ICP-1022 (Java)/Lab 1/: Box.java  HelloWorld3.java  Table.java  Welcome.java  commands.txt  oak.java
Year 1/ICP-1022 (Java)/Lab 2/: Board.java  FPArithmeticOps.java  MultiplicationTable.java  Numbers.java  QuadraticSolver.java  Tablex8.java
Year 1/ICP-1022 (Java)/Lab 3/: CToF.java  Formulae.java
Year 1/ICP-1022 (Java)/Lab 5/: Grading.java
Year 1/ICP-1022 (Java)/Lab 7/: CircleCalculator.java  GradeClassifier.java  GradeClassifier2.java
Year 1/ICP-1022 (Java)/Lab 9/: Random50.java
Year 1/ICP-1022/Lab 1/: Chars.java  Greeting.java  HelloWorld.java  HelloWorld2.java  Message.java  Slash.java  TabDemo.java  currency.java
Year 1/ICP-1022/Lab 2/: Boat.java  InputTester.java  PowersOfTwo.java
Year 1/ICP-1022/Lab 3/: CompoundInterest.java  DivisionTester.java  FToC.java  GradeCalculator.java  Mean.java  QuotientRemainder.java  TimeInterval.java
Year 1/ICP-1022/Lab 4/: StringName.java
Year 1/ICP-1022/Lab 5/: InOrder.java  MinMax2x.java  OddEven.java  ValueSwap.java  WhileTester.java
Year 1/ICP-1022/Lab 7/: MinMax3.java
Year 1/ICP-1023 (Java)/Lab 3/: PackTester.java  PlayingCard.java  PlayingCardTester.java
Year 1/ICP-1023 (Java)/Lab 4/.metadata/: version.ini
Year 1/ICP-1023 (Java)/Lab 5/.metadata/: version.ini
Year 1/ICP-1023 (Java)/Lab 5/PigGame/: DieTester.java  PlayerTester.java
Year 1/ICP-1023 (Java)/Lab 8/.metadata/: version.ini
Year 1/ICP-1023 (Java)/Programming Project/: StoredStockList.txt
Year 1/ICP-1023/Lab 1/: ComputeGrade.java  GradeCalculator.java
Year 1/ICP-1023/Lab 2/: Person.java  PersonTester.java
Year 1/ICP-1023/Lab 2/.metadata/: version.ini
Year 1/ICP-1023/Lab 3/: Pack.java
Year 1/ICP-1023/Lab 4/: BankAccount.java
Year 1/ICP-1023/Lab 5/PigGame/: Die.java  PigGame.java  Player.java
Year 1/ICP-1023/Programming Project/.metadata/: version.ini
Year 1/ICP-1026 (HTML)/: index.html
Year 1/ICP-1026 (HTML)/WebTech/Assignment/: about.html
Year 1/ICP-1026 (HTML)/lab2-files/: index.html
Year 1/ICP-1026 (HTML)/lab2-files/css/: mystyle.css
Year 1/ICP-1026 (HTML)/lab2-files/js/: script.js
Year 1/ICP-1026/WebTech/Assignment/: contact.html  dns18cch-test.docx  index.html
Year 1/ICP-1026/lab1-files/: evenmore.html  index.html  more.html
Year 1/ICP-1026/lab1-files/css/: style.css
Year 1/ICP-1026/lab2-files/: jsontest.json
Year 1/ICP-1029 (C++)/Assignment 1/Wordsearch/: Wordsearch.sln
Year 1/ICP-1029 (C++)/Lab 1/: main.c
Year 1/ICP-1029/Lab 1/: Lab1.dev  Lab1.layout  Lab1Exercise1.c  Makefile.win
Year 1/ICP-1033/: myprog - Copy.jas
Year 1/ICP-1033 (Arduino)/: myprog.jas
Year 1/ICP-1033/SendTweet/: SendTweet.pde
Year 1/ICP-1033/TweetImage/: TweetImage.pde
Year 1/ICP-1036/: IndexedFaceSet.x3d  IndexedFaceSet_color.x3d  Letter.x3d  Rotation.x3d  Translation.x3d
Year 1/ICP-1036 (X3D)/: Box.x3d
Year 1/ICP-1036 (X3D)/Assignment 1/: dns18cch-A1.x3d
Year 1/ICP-1036 (X3D)/Assignment 3/: PS3+Controller.skp
Year 1/ICP-1036/Assignment 3/: (BASIC)sony+playstation+controller.skp  Group13A-assn3-report1.docx  Group13A-assn3-report2.docx  gamecube+controller.skp  playstation+controller-rework.skb  playstation+controller-rework.skp  ps+controller.skp  ps2_rework.skp
Year 2/ICP-2021/: Animation2.avi  Colons in MATLAB.docx
Year 2/ICP-2021 (MATLAB)/: Animation1.avi
Year 2/ICP-2021 (MATLAB)/MATLAB/: Test.m  assignment1.m  lab3.m  lab4.m  lab5.m  test1.m
Year 2/ICP-2021/MATLAB/: RandPoints.m  assignment2.m  dice.m  dice2.m  fitness.m  lab2.m  test.ps
Year 2/ICP-2025 (Unreal, C++)/: ICP2025 Blog Marking Scheme(1).docx  Lab3(2).docx
Year 2/ICP-2036 (Arduino)/Lab 1/: Lab 1.docx
Year 2/ICP-2036 (Arduino)/Lab 4/: Lab 4.docx
Year 2/ICP-2036/Assessment_2/: Assessment_2.pde
Year 2/ICP-2036/Assessment_2_2/: Assessment_2_2.pde
Year 2/ICP-2036/Lab 2/: Lab 2.docx
Year 2/ICP-2036/Lab 3/: Lab 3.docx
Year 2/ICP-2150 (Java)/Java Object Stream Ex/: CliMsg.java  ObjMsg.java
Year 2/ICP-2150/Java Object Stream Ex/: Message.java
Year 2/ICP-2152 (Java)/: SimpleDataSource.java  database.properties  facts.txt
Year 2/ICP-2152/AcademiGymraeg/: Requirements and marks.xlsx  Test-Plan-Template-Excel.xlsx
Year 2/ICP-2302/: Module Introduction.pptx  createDatabase.sql
Year 3/ICP-3011/: put-pri-key.ppk  put-pub-key
Year 3/ICP-3011 (HTML)/assignment2/: feed.gtl.html  privateSnippet.html  privatesnipfinder.html
Year 3/ICP-3011/assignment2/: bestJoke.txt
Year 3/ICP-3038 (C++)/: exam-flowchart.pptx
Year 3/ICP-3038 (C++)/Lab-02/: lab2-2.cxx
Year 3/ICP-3038 (C++)/Lab-03/: lab3-4.cxx
Year 3/ICP-3038 (C++)/Lab-10/: gaussianFilter.cxx  medianFilter.cxx
Year 3/ICP-3038 (C++)/Lab-12/: MotionDetection.cxx
Year 3/ICP-3038 (C++)/Lab-13/: panorama.cxx
Year 3/ICP-3038/Lab-02/: CMakeLists.txt  lab2-1.c  lab2-1.cxx  lab2-2.c  lab2-3.cxx
Year 3/ICP-3038/Lab-03/: CMakeLists.txt  celsius2fahrenheit.cxx  lab3-1.cxx  lab3-2.cxx  lab3-3.cxx
Year 3/ICP-3038/Lab-06/: CMakeLists.txt
Year 3/ICP-3038/Lab-06/src/: test-constructors.cxx
Year 3/ICP-3038/Lab-1-6/: CMakeLists.txt
Year 3/ICP-3038/Lab-1-6/include/: Image.h
Year 3/ICP-3038/Lab-10/: CMakeLists.txt  displayImage.cxx  logScale.cxx  meanFilter.cxx  rgb2grey.cxx
Year 3/ICP-3038/Lab-11/: Blending.cxx  CMakeLists.txt  Pyramid.cxx  Pyramid.h
Year 3/ICP-3038/Lab-12/: CMakeLists.txt
Year 3/ICP-3038/Lab-13/: CMakeLists.txt
Year 3/ICP-3038/assignment-1/: CMakeLists.txt
Year 3/ICP-3038/assignment-1/code/: Image.h  blending.cxx  contrastEnhancement.cxx  laplacianFilter.cxx  negative.cxx
Year 3/ICP-3038/test/: CMakeLists.txt
Year 3/ICP-3083/: Iteration.docx
Year 3/ICP-3083 (MATLAB)/programs/: dns18cch_assignment1.m  generate_two_spirals_data.m  lab1.m  lab10.m  lab2.m
Year 3/ICP-3083/programs/: Untitled.m  dns18cch_assignment2.m  iris.txt  lab3.m  lab4.m  lab5.m  lab6.m  wine.mat
(+810 files in other folders)
